testing/Travis/testcases/Check/ShouldFail/Issue335.adl
CONTEXT Issue335 IN ENGLISH

REPRESENT B TYPE BIGALPHANUMERIC
REPRESENT C TYPE BIGALPHANUMERIC

RULE InitializeS: I[B] |- I[C]

ENDCONTEXT

-- This script shows a type error in the rule